@@ -1,5 +1,10 @@
 2002-07-22  Alexander Larsson  <alexl@redhat.com>
 
+	* libnautilus-private/nautilus-file.c (rename_guts):
+	Allow renaming desktop files to have a slash in them.
+
+2002-07-22  Alexander Larsson  <alexl@redhat.com>
+
 	* components/history/Nautilus_View_history.server.in.in: 
 	* components/notes/Nautilus_View_notes.server.in.in:
 	Fix wrong location.
